--- a/makefile.odx
+++ b/makefile.odx
@@ -50,10 +50,10 @@ DEVLIBS =
 
 EMULATOR = $(TARGET)$(EXE)
 
-ifeq "$(SUBTYPE)" "rs97"
+ifeq "$(SUBTYPE)" "RS97"
 DEFS = -D__ODX__ -DLSB_FIRST -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static inline" -Dasm="__asm__ __volatile__" -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -DRS97
 else
-DEFS = -D__ODX__ -DLSB_FIRST -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static inline" -Dasm="__asm__ __volatile__" -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -DRS97
+DEFS = -D__ODX__ -DLSB_FIRST -DALIGN_INTS -DALIGN_SHORTS -DINLINE="static inline" -Dasm="__asm__ __volatile__" -DMAME_UNDERCLOCK -DMAME_FASTSOUND -DENABLE_AUTOFIRE -DBIGCASE -DRS07
 endif
 
 W_OPTS = -Wall -Wno-write-strings -Wno-sign-compare -Wno-narrowing
